2016-05-18  Eric Herman <eric@freesa.org>

	* ChangeLog: Freshly created ChangeLog.