@@ -20,3 +20,43 @@ $*
 *.d
 test-*-dynamic
 test-*-static
+test-ehbigint
+
+################
+# autotools
+################
+autoscan.log
+autom4te.cache
+config.cache
+config.h
+config.intl
+config.log
+config.status
+libtool
+Makefile
+*.tar.gz
+stamp-h1
+INSTALL
+Makefile.in
+aclocal.m4
+compile
+config.h.in
+configure
+depcomp
+install-sh
+missing
+ar-lib
+config.guess
+config.sub
+ltmain.sh
+test-driver
+.deps/
+.libs/
+*.lo
+*.la
+m4/
+*.log
+*.trs
+*.log
+build-aux/
+.dirstamp
