@@ -1,3 +1,5 @@
 2016-05-18  Eric Herman <eric@freesa.org>
 
+	seems to be mostly working with autotools
+
 	* ChangeLog: Freshly created ChangeLog.
